--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,16 @@
 language: php
 
-php: [5.4, 5.5, 5.6, hhvm]
+php: [5.4, 5.5, 5.6, hhvm-nightly]
+
+matrix:
+  allow_failures:
+    - php: hhvm-nightly
 
 services:
   - redis-server
 
 before_script:
+  - gem install parallel_tests
   - composer selfupdate
   - composer install --prefer-source
 
