--- a/composer.json
+++ b/composer.json
@@ -8,12 +8,14 @@
         }
     ],
     "require": {
-        "phpunit/phpunit": "~4",
-        "symfony/console": "~2.5.4",
-        "symfony/stopwatch": "~2.5.4",
-        "symfony/process": "~2.5.4",
+        "symfony/console": "~2.3",
+        "symfony/stopwatch": "~2.3",
+        "symfony/process": "~2.3",
         "monolog/monolog": "~1.10.0",
         "predis/predis": "~0.8.0"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "~4"
     },
     "config": {
         "bin-dir": "bin/"
@@ -22,6 +24,9 @@
         "branch-alias": {
             "dev-master": "1.0-dev"
         }
+    },
+    "suggest": {
+        "phpunit/phpunit": "Install it if you want to run test on /bin/phpunit"
     },
     "bin": [
         "fastest"
