--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         "symfony/console": "~2.3",
         "symfony/stopwatch": "~2.3",
         "symfony/process": "~2.3",
-        "monolog/monolog": "~1.10.0",
-        "predis/predis": "~0.8.0"
+        "doctrine/collections" : "~1.2"
     },
     "require-dev": {
         "phpunit/phpunit": "~4"
@@ -29,7 +28,7 @@
         "phpunit/phpunit": "Install it if you want to run test on /bin/phpunit"
     },
     "bin": [
-        "fastest.php"
+        "fastest"
     ],
     "autoload": {"psr-4": {"Liuggio\\Fastest\\": "src"}}
 }
