--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
         "doctrine/collections" : "~1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4"
+        "phpunit/phpunit": "~4",
+        "predis/predis": "~0.8.0"
     },
     "config": {
         "bin-dir": "bin/"
