--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
         "doctrine/collections" : "~1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4",
-        "predis/predis": "~0.8.0"
+        "phpunit/phpunit": "~4"
     },
     "config": {
         "bin-dir": "bin/"
