--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "doctrine/collections" : "~1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4"
+        "phpunit/phpunit": "~4",
+        "behat/behat": "~2.5"
     },
     "config": {
         "bin-dir": "bin/"
@@ -26,7 +27,8 @@
         }
     },
     "suggest": {
-        "phpunit/phpunit": "Install it if you want to run test on /bin/phpunit"
+        "phpunit/phpunit": "Install it if you want to run test on /bin/phpunit",
+        "behat/behat": "Install it if you want to run tests with the provided Behat extension"
     },
     "bin": [
         "fastest"
