--- a/.travis.yml
+++ b/.travis.yml
@@ -12,3 +12,4 @@ before_script:
 
 script:
   - find tests/ -name "*Test.php" | php fastest -v
+  - bin/behat --list-scenarios | php fastest -v "bin/behat --strict {}"
