--- a/composer.json
+++ b/composer.json
@@ -33,5 +33,10 @@
     "bin": [
         "fastest"
     ],
-    "autoload": {"psr-4": {"Liuggio\\Fastest\\": "src"}}
+    "autoload": {
+        "psr-4": {"Liuggio\\Fastest\\": "src"}
+    },
+    "autoload-dev": {
+        "psr-4": { "Liuggio\\Fastest\\": "tests" }
+    }
 }
