[Behat extension] upgrade to v3.

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,7 @@ before_script:
 
 script:
   - find tests/ -name "*Test.php" | php fastest -v
-  - bin/behat
+  - bin/behat --config=adapters/Behat2/behat.yml
+  - sed -i -e 's/"behat\/behat"\x3A "~.*/"behat\/behat"\x3A "~3"/' composer.json
+  - composer update --prefer-source
+  - bin/behat --config=adapters/Behat/behat.yml
