--- a/composer.json
+++ b/composer.json
@@ -9,21 +9,21 @@
         }
     ],
     "require": {
-        "symfony/console": "~2.2",
-        "symfony/stopwatch": "~2.2",
-        "symfony/process": "~2.2",
-        "doctrine/collections" : "~1.2"
+        "symfony/console": "3.*",
+        "symfony/stopwatch": "3.*",
+        "symfony/process": "3.*",
+        "doctrine/collections" : "~1.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4",
-        "behat/behat": "~2.5"
+        "phpunit/phpunit": "5.*",
+        "behat/behat": "3.*"
     },
     "config": {
         "bin-dir": "bin/"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.3-dev"
+            "dev-master": "2.0-dev"
         }
     },
     "suggest": {
