--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,14 @@
         }
     ],
     "require": {
-        "symfony/console": "3.*",
-        "symfony/stopwatch": "3.*",
-        "symfony/process": "3.*",
-        "doctrine/collections" : "~1.3"
+        "symfony/console": "~2.2 | ~3.0",
+        "symfony/stopwatch": "~2.2 | ~3.0",
+        "symfony/process": "~2.2 | ~3.0",
+        "doctrine/collections" : "~1.2 | ~1.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.*",
-        "behat/behat": "3.*"
+        "phpunit/phpunit": "~4 | ~5",
+        "behat/behat": "~2.5 | ~3.0"
     },
     "config": {
         "bin-dir": "bin/"
