--- a/composer.json
+++ b/composer.json
@@ -9,9 +9,9 @@
         }
     ],
     "require": {
-        "symfony/console": "~2.2",
-        "symfony/stopwatch": "~2.2",
-        "symfony/process": "~2.2",
+        "symfony/console": "~2.2|~3.0",
+        "symfony/stopwatch": "~2.2|~3.0",
+        "symfony/process": "~2.2|~3.0",
         "doctrine/collections" : "~1.2"
     },
     "require-dev": {
@@ -23,7 +23,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.3-dev"
+            "dev-master": "1.4-dev"
         }
     },
     "suggest": {
