--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,8 @@ php: [5.3, 5.4, 5.5, 5.6, 7.0, hhvm-nightly]
 
 matrix:
   allow_failures:
-    - php: [7.0, hhvm-nightly]
+    - php: 7.0
+    - php: hhvm-nightly
 
 before_script:
   - composer selfupdate
