--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         "doctrine/collections" : "~1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4",
+        "phpunit/phpunit": "~4.8|~5.4",
         "behat/behat": "~2.5"
     },
     "config": {
