--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
         }
     ],
     "require": {
-        "symfony/console": "~2.2|~3.0",
-        "symfony/stopwatch": "~2.2|~3.0",
-        "symfony/process": "~2.2|~3.0",
-        "doctrine/collections" : "~1.2"
+        "symfony/console": "~2.7|~3.0",
+        "symfony/stopwatch": "~2.7|~3.0",
+        "symfony/process": "~2.7|~3.0",
+        "doctrine/collections" : "~1.2",
+        "phpunit/phpunit": "~4.8|~5.4"
     },
     "require-dev": {
-        "phpunit/phpunit": "~4.8|~5.4",
         "behat/behat": "~2.5"
     },
     "config": {
