--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: php
 
-php: [5.6, 7.0, hhvm]
+php:
+  - 5.6
+  - 7.0
+  - 7.1
 
 matrix:
+  include:
+    - php: hhvm
+      dist: trusty
   allow_failures:
     - php: hhvm
   fast_finish: true
