--- a/.travis.yml
+++ b/.travis.yml
@@ -4,11 +4,14 @@ php:
   - 5.6
   - 7.0
   - 7.1
+  - hhvm
+
+env:
+  matrix:
+    - PREFER_LOWEST="--prefer-lowest"
+    - PREFER_LOWEST=""
 
 matrix:
-  include:
-    - php: hhvm
-      dist: trusty
   allow_failures:
     - php: hhvm
   fast_finish: true
@@ -25,5 +28,5 @@ script:
   - find tests/ -name "*Test.php" | php fastest -v
   - bin/behat --config=adapters/Behat2/behat.yml
   - composer require --dev "behat/behat:~3.3" --no-update # update the Behat version.
-  - composer update
+  - composer update --prefer-source $PREFER_LOWEST
   - bin/behat --config=adapters/Behat/behat.yml
