--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     ],
     "require": {
         "php": ">=5.6",
-        "symfony/console": "~2.7|~3.0",
-        "symfony/stopwatch": "~2.7|~3.0",
-        "symfony/process": "~2.7|~3.0",
+        "symfony/console": "~2.7|~3.0|~4.0",
+        "symfony/stopwatch": "~2.7|~3.0|~4.0",
+        "symfony/process": "~2.7|~3.0|~4.0",
         "doctrine/collections" : "~1.2",
         "phpunit/phpunit": "^5.7|^6.1"
     },
