[WIP] Will be squashed: more improvement for travis matrix

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,27 +9,17 @@ php:
 
 env:
   matrix:
-    - PREFER_LOWEST="--prefer-lowest" SF_VERSION="~2.7"
-    - PREFER_LOWEST="" SF_VERSION="~2.7"
-    - PREFER_LOWEST="--prefer-lowest" SF_VERSION="~3.0"
-    - PREFER_LOWEST="" SF_VERSION="~3.0"
-    - PREFER_LOWEST="--prefer-lowest" SF_VERSION="~4.0"
-    - PREFER_LOWEST="" SF_VERSION="~4.0"
+    - PREFER_LOWEST="--prefer-lowest"
+    - PREFER_LOWEST=""
 
 matrix:
   exclude:
     - php: 5.6
-      env: PREFER_LOWEST="--prefer-lowest" SF_VERSION="~4.0"
-    - php: 5.6
-      env: PREFER_LOWEST="" SF_VERSION="~4.0"
+      env: PREFER_LOWEST=""
     - php: 7.0
-      env: PREFER_LOWEST="--prefer-lowest" SF_VERSION="~4.0"
-    - php: 7.0
-      env: PREFER_LOWEST="" SF_VERSION="~4.0"
+      env: PREFER_LOWEST=""
     - php: hhvm
-      env: PREFER_LOWEST="--prefer-lowest" SF_VERSION="~4.0"
-    - php: hhvm
-      env: PREFER_LOWEST="" SF_VERSION="~4.0"
+      env: PREFER_LOWEST=""
   allow_failures:
     - php: hhvm
   fast_finish: true
@@ -40,10 +30,11 @@ cache:
 
 before_script:
   - composer selfupdate
-  - if [[ $SF_VERSION ]]; then composer require "symfony/console:${SF_VERSION}" --no-update; fi
-  - if [[ $SF_VERSION ]]; then composer require "symfony/stopwatch:${SF_VERSION}" --no-update; fi
-  - if [[ $SF_VERSION ]]; then composer require "symfony/process:${SF_VERSION}" --no-update; fi
-  - if [[ $TRAVIS_PHP_VERSION == 7.2 ]]; then composer require "phpunit/phpunit:^6.1" --no-update; fi
+  - if [[ $TRAVIS_PHP_VERSION == 7.2 ]]; then
+      composer require "phpunit/phpunit:^6.1" --no-update;
+    else
+      composer require "phpunit/phpunit:^5.7" --no-update;
+    fi
   - composer update $PREFER_LOWEST
 
 script:
