--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,7 @@
         "symfony/console": ">=2.7 <5.0",
         "symfony/stopwatch": ">=2.7 <5.0",
         "symfony/process": ">=2.7 <5.0",
-        "doctrine/collections" : "~1.2",
-        "phpunit/phpunit": "^5.7|^6.1"
+        "doctrine/collections" : "~1.2"
     },
     "require-dev": {
         "behat/behat": "~3.3"
@@ -24,7 +23,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.5-dev"
+            "dev-master": "1.6-dev"
         }
     },
     "suggest": {
