--- a/composer.json
+++ b/composer.json
@@ -13,18 +13,17 @@
         "symfony/console": ">=2.7 <5.0",
         "symfony/stopwatch": ">=2.7 <5.0",
         "symfony/process": ">=2.7 <5.0",
-        "doctrine/collections" : "~1.2",
-        "phpunit/phpunit": "^5.7|^6.1"
+        "doctrine/collections" : "~1.2"
     },
     "require-dev": {
-        "behat/behat": "~2.5"
+        "behat/behat": "~3.3"
     },
     "config": {
         "bin-dir": "bin/"
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.5-dev"
+            "dev-master": "1.6-dev"
         }
     },
     "suggest": {
