--- a/composer.json
+++ b/composer.json
@@ -9,14 +9,14 @@
         }
     ],
     "require": {
-        "php": ">=5.6",
-        "symfony/console": ">=2.7 <5.0",
-        "symfony/stopwatch": ">=2.7 <5.0",
-        "symfony/process": ">=2.7 <5.0",
-        "doctrine/collections" : "~1.2"
+        "php": "^5.6|^7.0",
+        "symfony/console": "^2.7|^3.0|^4.0",
+        "symfony/stopwatch": "^2.7|^3.0|^4.0",
+        "symfony/process": "^2.7|^3.0|^4.0",
+        "doctrine/collections": "^1.2"
     },
     "require-dev": {
-        "behat/behat": "~3.3"
+        "behat/behat": "^3.3"
     },
     "config": {
         "bin-dir": "bin/"
