--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": "^5.6|^7.0",
+        "php": "^7.1",
         "symfony/console": "^2.7|^3.0|^4.0",
         "symfony/stopwatch": "^2.7|^3.0|^4.0",
         "symfony/process": "^2.7|^3.0|^4.0",
