--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: php
 php:
   - 7.2
   - 7.3
-  - 7.4snapshot
+  - 7.4
 
 env:
   matrix:
@@ -21,5 +21,5 @@ before_script:
 
 script:
   - find tests/ -name "*Test.php" | php fastest -v
-  - ./fastest -x phpunit.xml.dist -v "vendor/phpunit/phpunit/phpunit {};"
+  - ./fastest -x phpunit.xml.dist -v "bin/phpunit {};"
   - bin/behat --config=adapters/Behat/behat.yml
