--- a/.travis.yml
+++ b/.travis.yml
@@ -21,5 +21,5 @@ before_script:
 
 script:
   - find tests/ -name "*Test.php" | php fastest -v
-  - ./fastest -x phpunit.xml.dist -v "bin/phpunit {};"
+  - ./fastest -x phpunit.xml.dist -v "bin/phpunit {}"
   - bin/behat --config=adapters/Behat/behat.yml
