--- a/composer.json
+++ b/composer.json
@@ -10,10 +10,11 @@
     ],
     "require": {
         "php": "^7.2",
-        "symfony/console": "^3.4|^4.2",
-        "symfony/stopwatch": "^3.4|^4.2",
-        "symfony/process": "^3.4|^4.2",
-        "doctrine/collections": "^1.2"
+        "symfony/console": "^3.4|^4.2|^5.0",
+        "symfony/stopwatch": "^3.4|^4.2|^5.0",
+        "symfony/process": "^3.4|^4.2|^5.0",
+        "doctrine/collections": "^1.2",
+        "phpunit/phpunit": "^8.2"
     },
     "require-dev": {
         "behat/behat": "^3.3"
