--- a/phpstan.neon
+++ b/phpstan.neon
@@ -16,3 +16,22 @@ parameters:
 	reportUnmatchedIgnoredErrors: false
 	ignoreErrors: #see https://github.com/phpstan/phpstan/issues/1267#issuecomment-552874947 -> @todo remove when sf 3.4 support ends
 	    - "#^Call to an undefined static method #"
+	    # @todo remove when phpunit 8.5 support ends
+	    - message: '#^Call to static method getInstance\(\) on an unknown class PHPUnit\\TextUI\\(:?|Xml)Configuration\\Registry.$#'
+	      path: src/Queue/CreateTestsQueueFromPhpUnitXML.php
+	    - message: '#has invalid typehint type PHPUnit\\TextUI\\(:?|Xml)Configuration\\TestSuiteCollection.$#'
+	      path: src/Queue/CreateTestsQueueFromPhpUnitXML.php
+	    - message: '#^Call to method map\(\) on an unknown class PHPUnit\\TextUI\\(:?|Xml)Configuration\\TestSuiteMapper.$#'
+	      path: src/Queue/CreateTestsQueueFromPhpUnitXML.php
+	    - message: '#has invalid typehint type PHPUnit\\TextUI\\(:?|Xml)Configuration\\PHPUnit.$#'
+	      path: src/Queue/CreateTestsQueueFromPhpUnitXML.php
+	    - message: '#on an unknown class PHPUnit\\TextUI\\(:?|Xml)Configuration\\PHPUnit.$#'
+	      path: src/Queue/CreateTestsQueueFromPhpUnitXML.php
+	    - message: '#^Instantiated class PHPUnit\\TextUI\\(:?|Xml)Configuration\\TestSuiteMapper not found.$#'
+	      path: src/Queue/CreateTestsQueueFromPhpUnitXML.php
+	    - message: '#^Call to method load\(\) on an unknown class PHPUnit\\TextUI\\XmlConfiguration\\Loader.$#'
+	      path: src/Queue/CreateTestsQueueFromPhpUnitXML.php
+	    - message: '#^Instantiated class PHPUnit\\TextUI\\XmlConfiguration\\Loader not found.$#'
+	      path: src/Queue/CreateTestsQueueFromPhpUnitXML.php
+	    - message: '#^Call to static method getInstance\(\) on an unknown class PHPUnit\\Util\\Configuration.$#'
+	      path: src/Queue/CreateTestsQueueFromPhpUnitXML.php
