--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -14,4 +14,8 @@
             <directory suffix=".php">src</directory>
         </whitelist>
     </filter>
+
+    <logging>
+        <log type="coverage-clover" target="coverage.xml"/>
+    </logging>
 </phpunit>
