--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "doctrine/collections": "^1.2"
     },
     "require-dev": {
-        "behat/behat": "^3.3"
+        "behat/behat": "^3.3",
+        "phpstan/phpstan": "^0.12.48"
     },
     "config": {
         "bin-dir": "bin/"
