--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         }
     ],
     "require": {
-        "php": "^7.3",
+        "php": "^7.3 || ^8.0",
         "symfony/console": "^3.4|^4.2|^5.0",
         "symfony/stopwatch": "^3.4|^4.2|^5.0",
         "symfony/process": "^3.4|^4.2|^5.0",
@@ -17,8 +17,8 @@
     },
     "require-dev": {
         "behat/behat": "^3.3",
-        "phpstan/phpstan": "^0.12.48",
-        "phpstan/phpstan-phpunit": "^0.12.16"
+        "phpstan/phpstan": "^0.12",
+        "phpstan/phpstan-phpunit": "^0.12"
     },
     "config": {
         "bin-dir": "bin/"
