--- a/composer.json
+++ b/composer.json
@@ -9,16 +9,16 @@
         }
     ],
     "require": {
-        "php": "^7.3",
-        "symfony/console": "^3.4|^4.2|^5.0",
-        "symfony/stopwatch": "^3.4|^4.2|^5.0",
-        "symfony/process": "^3.4|^4.2|^5.0",
+        "php": "^7.3 || ^8.0",
+        "symfony/console": "^3.4|^4.4|^5.0",
+        "symfony/stopwatch": "^3.4|^4.4|^5.0",
+        "symfony/process": "^3.4|^4.4|^5.0",
         "doctrine/collections": "^1.2"
     },
     "require-dev": {
-        "behat/behat": "^3.3",
-        "phpstan/phpstan": "^0.12.48",
-        "phpstan/phpstan-phpunit": "^0.12.16"
+        "behat/behat": "^3.6",
+        "phpstan/phpstan": "^0.12.78",
+        "phpstan/phpstan-phpunit": "^0.12.17"
     },
     "config": {
         "bin-dir": "bin/"
