--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     ],
     "require": {
         "php": "^7.3 || ^8.0",
-        "symfony/console": "^3.4|^4.4|^5.0",
-        "symfony/stopwatch": "^3.4|^4.4|^5.0",
-        "symfony/process": "^3.4|^4.4|^5.0",
+        "symfony/console": "^4.4|^5.0",
+        "symfony/stopwatch": "^4.4|^5.0",
+        "symfony/process": "^4.4|^5.0",
         "doctrine/collections": "^1.2"
     },
     "require-dev": {
