--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     },
     "require-dev": {
         "behat/behat": "^3.6",
-        "phpstan/phpstan": "^0.12.99",
-        "phpstan/phpstan-phpunit": "^0.12.22"
+        "phpstan/phpstan": "1.8.11",
+        "phpstan/phpstan-phpunit": "1.1.3"
     },
     "config": {
         "bin-dir": "bin/"
