--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,7 +13,7 @@ jobs:
 
       - uses: shivammathur/setup-php@v2
         with:
-          php-version: 7.4
+          php-version: 8.0
 
       - name: Validate composer.json
         run: composer validate
@@ -24,7 +24,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        php-versions: [ '7.4', '8.0', '8.1', '8.2', '8.3', '8.4']
+        php-versions: [ '8.0', '8.1', '8.2', '8.3', '8.4']
         composer-deps: [ 'lowest', 'highest' ]
         php-unit-versions: [ '8.5.19', '9.0', '9.3', '9.5' ]
         exclude:
