--- a/composer.json
+++ b/composer.json
@@ -9,10 +9,10 @@
         }
     ],
     "require": {
-        "php": "^7.4|^8.0",
-        "symfony/console": "^5.4|^6.0|^7.0",
-        "symfony/stopwatch": "^5.4|^6.0|^7.0",
-        "symfony/process": "^5.4|^6.0|^7.0",
+        "php": "^8.0",
+        "symfony/console": "^5.4|^6.4|^7.2",
+        "symfony/stopwatch": "^5.4|^6.4|^7.2",
+        "symfony/process": "^5.4|^6.4|^7.2",
         "doctrine/collections": "^1.2|^2.0",
         "symfony/deprecation-contracts": "^2.1|^3"
     },
@@ -26,7 +26,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "1.12-dev"
+            "dev-master": "1.13-dev"
         }
     },
     "suggest": {
