--- a/composer.json
+++ b/composer.json
@@ -10,9 +10,9 @@
     ],
     "require": {
         "php": "^8.0",
-        "symfony/console": "^5.4|^6.4|^7.2",
-        "symfony/stopwatch": "^5.4|^6.4|^7.2",
-        "symfony/process": "^5.4|^6.4|^7.2",
+        "symfony/console": "^5.4|^6.4|^7.2|^8.0",
+        "symfony/stopwatch": "^5.4|^6.4|^7.2|^8.0",
+        "symfony/process": "^5.4|^6.4|^7.2|^8.0",
         "doctrine/collections": "^1.2|^2.0",
         "symfony/deprecation-contracts": "^2.1|^3"
     },
